--- a/DatabaseReader/DatabaseReader/Views/Shared/_Layout.cshtml
+++ b/DatabaseReader/DatabaseReader/Views/Shared/_Layout.cshtml
@@ -16,13 +16,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Calorie Predictor", "Days", "Days", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("User Settings", "EditUserSettings", "UserSettings")</li>
                     <li>@Html.ActionLink("Days", "Days", "Days")</li>
+                    <li>@Html.ActionLink("User Settings", "EditUserSettings", "UserSettings")</li>
                     <li>@Html.ActionLink("Workout", "CreateWorkout", "Workout")</li>
                 </ul>
             </div>
