--- a/DatabaseReader/DatabaseReader/Views/Details/Details.cshtml
+++ b/DatabaseReader/DatabaseReader/Views/Details/Details.cshtml
@@ -31,6 +31,9 @@
     </style>
 </head>
 <body>
+    <div>
+        @Html.ActionLink("Back to List", "Days", "Days")
+    </div>
     <div id="chart_container">
         <canvas id="bar_chart"></canvas>
     </div>
@@ -71,7 +74,9 @@
 
 
     </table>
-
+    <div>
+        @Html.ActionLink("Back to List", "Days", "Days")
+    </div>
     <script>
         var selectedCaloriesArray = @Html.Raw(Json.Encode(ViewBag.CALS));
         var timesArray = @Html.Raw(Json.Encode(ViewBag.TIME));
@@ -169,7 +174,7 @@
                         borderWidth: 1,
                         pointRadius: 0
                     },
-                    
+
                 ]
             },
             options: {
