Fix bug when retrieving average when there is no data

--- a/DatabaseReader/DatabaseReader/Views/Days/Days.cshtml
+++ b/DatabaseReader/DatabaseReader/Views/Days/Days.cshtml
@@ -9,16 +9,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Date)
+            Date
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IsWorkoutDay)
+            Workout Day
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IsHoliday)
+            On Holiday
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TotalCalories)
+            Total Calories
         </th>
         <th></th>
     </tr>
