Fix Workout routing

--- a/DatabaseReader/DatabaseReader/Views/Shared/_Layout.cshtml
+++ b/DatabaseReader/DatabaseReader/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Days", "Days", "Days")</li>
                     <li>@Html.ActionLink("User Settings", "EditUserSettings", "UserSettings")</li>
-                    <li>@Html.ActionLink("Workout", "CreateWorkout", "Workout")</li>
+                    <li>@Html.ActionLink("Workout", "Index", "Workout")</li>
                 </ul>
             </div>
         </div>
